--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -10,9 +11,63 @@ h1{
 img{
     width: 100%;
 }
+p{
+    color: dimgray;
+}
 .col-45{
     width: 40%;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
+}
+.top-banner{
+    background-image: url(../img/top-banner.png);
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 100px;
+
+}
+.link-btn{
+    text-decoration: none;
+    background-image: linear-gradient(45deg,green,navy);
+    padding: 10px 40px;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+}
+h2{
+    font-size: 40px;
+}
+.dream-area{
+    background-image: url(../img/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.experiences h3{
+    color: orange;
+}
+.single-experiences{
+    box-shadow: 10px 10px 40px gray;
+    height: 75%;
+    background-color: #fff;
+}
+.experiences{
+    background-image: url(../img/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 8px solid;
+    border-image:linear-gradient(180deg,#D6ED17FF,green);
+    border-image-slice:1 ;
+}
+#babyweb{
+    border-left: 8px solid;
+    border-image: linear-gradient(180deg,navy,gray);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
